# gravity

./: CMakeLists.txt  main.cpp
include/: Particle.h  Star.h
src/: Particle.cpp  Star.cpp
